[package]
name = "ocaml-lwt-interop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ocaml = "1.0.1"
ocaml-interop = "0.10.0"
async-task = "4.4.*"
slab = "0.4.*"
concurrent-queue="2.0.*"

[build-dependencies]
ocaml-build = "1.0.0-beta.4"

[workspace]

members = [
    ".",
    "rust-staticlib"
]
