[package]
name = "ocaml-lwt-interop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
ocaml = "1.0.1"
async-executor = "1.13"
waker-fn = "1.2"
futures-lite = "2.3"
future-local-storage = "0.1.1"
ctor = "0.2"
ocaml-rs-smartptr = { version = "0.1.0" }

[build-dependencies]
ocaml-build = "1.0.0-beta.4"

[workspace]

members = [
    ".",
    "rust-staticlib"
]

[patch.crates-io]
ocaml-rs-smartptr = { git = "https://github.com/Lupus/ocaml-rs-smartptr.git" }
