[package]
name = "ocaml-lwt-interop"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.64"
ocaml = "1.0.1"
static_assertions = "1.1.0"
async-executor = "1.13"
waker-fn = "1.2"
futures-lite = "2.3"
ocaml-gen = "0.1.5"
highway = "1.2.0"
tokio = { version="1.40.0", features=["rt","rt-multi-thread"] }
ocaml-rs-smartptr = { version = "0.1.0" }
ocaml-lwt-interop-macro = { path="macro", version = "0.1.0" }

[workspace]

members = [
    ".",
    "macro",
    "rust-staticlib",
    "test-stubs",
    "stubs-gen",
]

[patch.crates-io]
ocaml-rs-smartptr = { git = "https://github.com/Lupus/ocaml-rs-smartptr.git" }
