(library
 (name rust_async)
 (public_name rust-async)
 (libraries lwt.unix ocaml-rs-smartptr rust-staticlib)
 (flags (-linkall))
 (preprocess
  (pps lwt_ppx)))

(rule
 (targets Stubs.ml.new)
 (action
  (with-stdout-to
   %{targets}
   (run stubs-gen/stubs-gen))))

(rule
 (alias runtest)
 (action
  (diff Stubs.ml Stubs.ml.new)))
