(library
 (name rust_async)
 (public_name rust-async)
 (libraries lwt.unix ocaml-rs-smartptr rust-staticlib)
 (flags (-linkall))
 (preprocess
  (pps lwt_ppx)))

(rule
 (action
  (copy %{workspace_root}/stubs-gen/Ocaml_lwt_interop.ml Stubs.ml.new)))

(rule
 (alias runtest)
 (action
  (diff Stubs.ml Stubs.ml.new)))
