[package]
name = "ocaml-lwt-interop-test-stubs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
async-task = "4.7.1"
ocaml = "1.0.1"
futures-lite = "2.3"
paste = "1.0.15"
tokio = { version="*", features=["time"] }
ocaml-lwt-interop = { path=".." }
