(library
 (name test_stubs)
 (wrapped false)
 (modules Stubs)
 (libraries rust_async_stubs lwt))

(executable
 (name benchmark)
 (modules benchmark)
 (libraries unix lwt.unix rust-async rust_async_stubs test_stubs)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name test)
 (modules test)
 (libraries
  unix
  lwt.unix
  alcotest
  alcotest-lwt
  rust-async
  rust_async_stubs
  test_stubs)
 (preprocess
  (pps lwt_ppx)))

(rule
 (action
  (copy
   %{workspace_root}/stubs-gen/Ocaml_lwt_interop_test_stubs.ml
   Stubs.ml.new)))

(rule
 (alias runtest)
 (action
  (diff Stubs.ml Stubs.ml.new)))

(rule
 (alias benchmark)
 (action
  (progn
   (run ./benchmark.exe lwt)
   (run ./benchmark.exe rust)
   (run ./benchmark.exe rust-slow)
   (run ./benchmark.exe gc))))

(rule
 (alias runtest)
 (action
  (run ./test.exe)))
